<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".Convert_Calculater" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <LinearLayout
                    android:id="@+id/LinearLayout01"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/TextView02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clc_data1"
                        android:textColor="@color/holo_blue_bright" />

                    <EditText
                        android:id="@+id/page5_data1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textMultiLine"
                        android:maxLines="3"
                        android:text="@string/defualt_num" >

                        <requestFocus />
                    </EditText>

                    <TextView
                        android:id="@+id/TextView04"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_from_input"
                        android:textColor="@color/holo_blue_bright" />

                    <EditText
                        android:id="@+id/page5_from1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number"
                        android:singleLine="true"
                        android:text="@string/deffrom" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout07"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/LinearLayout01"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/LinearLayout06"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical" >
                    </LinearLayout>

                    <TextView
                        android:id="@+id/TextView03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clc_data2"
                        android:textColor="@color/holo_blue_bright" />

                    <EditText
                        android:id="@+id/page5_data2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textMultiLine"
                        android:maxLines="3"
                        android:text="@string/defualt_num" />

                    <TextView
                        android:id="@+id/TextView01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_from_input"
                        android:textColor="@color/holo_blue_bright" />

                    <EditText
                        android:id="@+id/page5_from2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number"
                        android:singleLine="true"
                        android:text="@string/deffrom" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/LinearLayout07"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" >

                        <CheckBox
                            android:id="@+id/jia"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/jia" />

                        <CheckBox
                            android:id="@+id/jian"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/jian" />

                        <CheckBox
                            android:id="@+id/cheng"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cheng" />

                        <CheckBox
                            android:id="@+id/chu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chu" />

                        <CheckBox
                            android:id="@+id/yu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/yu" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" >

                        <Button
                            android:id="@+id/page5_bt_clear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/page2_bt_clear"
                            android:textColor="@color/holo_blue_bright" />

                        <Button
                            android:id="@+id/page5_result"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/calculate"
                            android:textColor="@color/holo_blue_bright" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page3_tips"
                android:textColor="@color/holo_orange_light" />

            <LinearLayout
                android:id="@+id/page5_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
            <LinearLayout
                android:id="@+id/imAdview7"
	            android:layout_width="320dp"
	            android:layout_height="50dp"
	            android:orientation="vertical"
             >
        </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/admobView5"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/imAdview5"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            >
        </LinearLayout>
    </LinearLayout>

</FrameLayout>